# awawausb

./: .gitignore  Dockerfile  README.md
Documentation/: architecture.md  dev-debugging.md  what-is-webusb.md
extension/: awawausb.js  content.js  manifest.json  page.js
extension/_locales/en/: messages.json
extension/_locales/zh/: messages.json
extension/debug-page/: debug.css  debug.html  debug.js
extension/permission-page/: permission.css  permission.html  permission.js
native-stub/: Cargo.toml
native-stub/.cargo/: config.toml
native-stub/src/: blocklists.rs  enum_windows.rs  linux.rs  macos_sys.rs  macos_wrap.rs  main.rs  protocol.rs  stdio_unix.rs  stdio_windows.rs  udev_sys.rs  usb_windows.rs
native-stub/xtra-installers/: install.bat  install.sh  manifest-win.json
usb-ch9/: Cargo.toml
usb-ch9/src/: ch9_core.rs  interface_association_descriptor.rs  lib.rs
