[package]
name = "awawausb-native-stub"
version = "0.0.0"
edition = "2024"

[dependencies]
base64 = "0.22"
libc = "0.2"
log = "0.4"
stderrlog = "0.6"
pin-init = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
usb-ch9 = { path = "../usb-ch9" }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
kqueue-sys = "1.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Devices_Properties",
    "Win32_Devices_Usb",
    "Win32_System_IO",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_Security",
] }
windows-strings = "0.5"
